// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`onigiri compiler > snapshots > basic elements > div with multiple attributes 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "div", {"id": "app", "class": "main", "data-test": "value"}, [[2, "Content"]]];
}"
`;

exports[`onigiri compiler > snapshots > basic elements > div with static class 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "div", {"class": "container"}, [[2, "Content"]]];
}"
`;

exports[`onigiri compiler > snapshots > basic elements > multiple root elements (fragment) 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [3, [[0, "div", undefined, [[2, "First"]]], [0, "span", undefined, [[2, "Second"]]], [0, "p", undefined, [[2, "Third"]]]]];
}"
`;

exports[`onigiri compiler > snapshots > basic elements > nested elements 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "div", {"class": "outer"}, [[0, "div", {"class": "inner"}, [[0, "span", undefined, [[2, "Nested text"]]]]]]];
}"
`;

exports[`onigiri compiler > snapshots > basic elements > self-closing elements 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "input", {"type": "text", "placeholder": "Enter text"}];
}"
`;

exports[`onigiri compiler > snapshots > basic elements > simple div with text 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "div", undefined, [[2, "Hello World"]]];
}"
`;

exports[`onigiri compiler > snapshots > components > component WITHOUT v-load-client (server-rendered) 1`] = `
"import { resolveComponentInInstance as __onigiri_resolveComponent } from "vue-onigiri/runtime/resolve-component";
import { serializeComponentInContext as __serializeComponentInContext } from "vue-onigiri/runtime/serialize";

export function renderOnigiri(_ctx, __instance) {
const _component_MyComponent = __onigiri_resolveComponent(__instance, "MyComponent")
  return __serializeComponentInContext(_component_MyComponent, {"title": _ctx.title, "count": 42}, __instance, undefined);
}"
`;

exports[`onigiri compiler > snapshots > components > component WITHOUT v-load-client with slot 1`] = `
"import { resolveComponentInInstance as __onigiri_resolveComponent } from "vue-onigiri/runtime/resolve-component";
import { serializeComponentInContext as __serializeComponentInContext } from "vue-onigiri/runtime/serialize";

export function renderOnigiri(_ctx, __instance) {
const _component_MyComponent = __onigiri_resolveComponent(__instance, "MyComponent")
  return __serializeComponentInContext(_component_MyComponent, undefined, __instance, { "default": () => [[2, "Slot content"]] });
}"
`;

exports[`onigiri compiler > snapshots > components > component with default slot 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [1, undefined, "/components/MyComponent.vue", "default", { "default": [2, "Default slot content"] }];
}"
`;

exports[`onigiri compiler > snapshots > components > component with named slots 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [1, undefined, "/components/MyComponent.vue", "default", { "header": [2, "Header content"], "default": [2, "Main content"], "footer": [2, "Footer content"] }];
}"
`;

exports[`onigiri compiler > snapshots > components > component with props 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [1, {"title": _ctx.title, "count": 42}, "/components/MyComponent.vue", "default", undefined];
}"
`;

exports[`onigiri compiler > snapshots > components > kebab-case component with v-load-client 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [1, {"prop": _ctx.value}, "/components/MyComponent.vue", "default", { "default": [2, "Content"] }];
}"
`;

exports[`onigiri compiler > snapshots > directives > v-else-if and v-else 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return (_ctx.status === 'loading' ? [0, "div", undefined, [[2, "Loading..."]]] : (_ctx.status === 'error' ? [0, "div", undefined, [[2, "Error!"]]] : [0, "div", undefined, [[2, "Content"]]]));
}"
`;

exports[`onigiri compiler > snapshots > directives > v-for with index 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [3, [...(_ctx.items.map((item, index) => [0, "li", {"key": index}, [[2, (index + ": " + item)]]]))]];
}"
`;

exports[`onigiri compiler > snapshots > directives > v-for with key 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [3, [...(_ctx.items.map((item) => [0, "li", {"key": item.id}, [[2, item.name]]]))]];
}"
`;

exports[`onigiri compiler > snapshots > directives > v-if 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return (_ctx.show ? [0, "div", undefined, [[2, "Conditional"]]] : null);
}"
`;

exports[`onigiri compiler > snapshots > directives > v-model on input 1`] = `
"import { withDirective as __withDirective } from "vue-onigiri/runtime/with-directive";

export function renderOnigiri(_ctx, __instance) {
return __withDirective("model", [0, "input", undefined], {"value": _ctx.text});
}"
`;

exports[`onigiri compiler > snapshots > directives > v-show 1`] = `
"import { withDirective as __withDirective } from "vue-onigiri/runtime/with-directive";

export function renderOnigiri(_ctx, __instance) {
return __withDirective("show", [0, "div", undefined, [[2, "Visible content"]]], {"value": _ctx.visible});
}"
`;

exports[`onigiri compiler > snapshots > dynamic bindings > class array binding 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "div", {"class": [_ctx.baseClass, _ctx.conditionalClass]}, [[2, "Content"]]];
}"
`;

exports[`onigiri compiler > snapshots > dynamic bindings > class object binding 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "div", {"class": { active: _ctx.isActive, disabled: _ctx.isDisabled }}, [[2, "Content"]]];
}"
`;

exports[`onigiri compiler > snapshots > dynamic bindings > dynamic attribute name 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "div", {[_ctx.attrName]: _ctx.attrValue}, [[2, "Content"]]];
}"
`;

exports[`onigiri compiler > snapshots > dynamic bindings > style object binding 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "div", {"style": { color: _ctx.textColor, fontSize: _ctx.size + 'px' }}, [[2, "Content"]]];
}"
`;

exports[`onigiri compiler > snapshots > dynamic bindings > v-bind object spread 1`] = `
"import { mergeProps as _mergeProps } from "vue";

export function renderOnigiri(_ctx, __instance) {
return [0, "div", _mergeProps(_ctx.attrs), [[2, "Content"]]];
}"
`;

exports[`onigiri compiler > snapshots > dynamic bindings > v-bind shorthand 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "div", {"id": _ctx.elementId, "class": _ctx.dynamicClass}, [[2, "Content"]]];
}"
`;

exports[`onigiri compiler > snapshots > event handlers > handler with modifier 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "form", {"onSubmit": _ctx.onSubmit}, [[2, "Submit"]]];
}"
`;

exports[`onigiri compiler > snapshots > event handlers > inline expression handler 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "button", {"onClick": $event => (_ctx.count++)}, [[2, "Increment"]]];
}"
`;

exports[`onigiri compiler > snapshots > event handlers > multiple event handlers 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "input", {"onFocus": _ctx.onFocus, "onBlur": _ctx.onBlur, "onInput": _ctx.onInput}];
}"
`;

exports[`onigiri compiler > snapshots > event handlers > simple click handler 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "button", {"onClick": _ctx.handleClick}, [[2, "Click me"]]];
}"
`;

exports[`onigiri compiler > snapshots > inline expressions > complex nested structure 1`] = `"[0, "div", {"class": "card"}, [[0, "header", {"class": "card-header"}, [[0, "h2", undefined, [[2, _ctx.title]]]]], [0, "div", {"class": "card-body"}, [[0, "p", undefined, [[2, _ctx.content]]]]]]]"`;

exports[`onigiri compiler > snapshots > inline expressions > component with v-load-client 1`] = `"[1, {"initial": 5}, "/components/Counter.vue", "default", undefined]"`;

exports[`onigiri compiler > snapshots > inline expressions > component without v-load-client (server-rendered) 1`] = `"__serializeComponentInContext(_component_Counter, {"initial": 5}, __instance, undefined)"`;

exports[`onigiri compiler > snapshots > inline expressions > element with interpolation 1`] = `"[0, "span", undefined, [[2, _ctx.message]]]"`;

exports[`onigiri compiler > snapshots > inline expressions > fragment 1`] = `"[3, [[0, "div", undefined, [[2, "A"]]], [0, "div", undefined, [[2, "B"]]]]]"`;

exports[`onigiri compiler > snapshots > inline expressions > simple element 1`] = `"[0, "div", undefined, [[2, "Hello"]]]"`;

exports[`onigiri compiler > snapshots > interpolation > expression 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "span", undefined, [[2, _ctx.count + 1]]];
}"
`;

exports[`onigiri compiler > snapshots > interpolation > method call 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "span", undefined, [[2, _ctx.formatDate(_ctx.date)]]];
}"
`;

exports[`onigiri compiler > snapshots > interpolation > mixed text and interpolation 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "p", undefined, [[2, ("Hello " + _ctx.name + ", you have " + _ctx.count + " messages.")]]];
}"
`;

exports[`onigiri compiler > snapshots > interpolation > simple variable 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "span", undefined, [[2, _ctx.message]]];
}"
`;

exports[`onigiri compiler > snapshots > interpolation > ternary 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "span", undefined, [[2, _ctx.active ? 'Yes' : 'No']]];
}"
`;

exports[`onigiri compiler > snapshots > real-world examples > card component 1`] = `
"import { renderSlot as __renderSlot } from "vue-onigiri/runtime/render-slot";

export function renderOnigiri(_ctx, __instance) {
return [0, "article", {"class": "card", "class": [_ctx.variant, { featured: _ctx.isFeatured }]}, [(_ctx.image ? [0, "img", {"src": _ctx.image, "alt": _ctx.title, "class": "card-image"}] : null), [0, "div", {"class": "card-content"}, [[0, "h3", {"class": "card-title"}, [[2, _ctx.title]]], [0, "p", {"class": "card-description"}, [[2, _ctx.description]]], __renderSlot(_ctx, _ctx.slots, "actions", undefined, undefined)]]]];
}"
`;

exports[`onigiri compiler > snapshots > real-world examples > form with validation 1`] = `
"import { withDirective as __withDirective } from "vue-onigiri/runtime/with-directive";

export function renderOnigiri(_ctx, __instance) {
return [0, "form", {"onSubmit": _ctx.onSubmit, "class": "form"}, [[0, "div", {"class": "form-group"}, [[0, "label", {"for": "email"}, [[2, "Email"]]], __withDirective("model", [0, "input", {"id": "email", "type": "email", "class": { error: _ctx.errors.email }}], {"value": _ctx.email}), (_ctx.errors.email ? [0, "span", {"class": "error-message"}, [[2, _ctx.errors.email]]] : null)]], [0, "button", {"type": "submit", "disabled": _ctx.isSubmitting}, [[2, _ctx.isSubmitting ? 'Submitting...' : 'Submit']]]]];
}"
`;

exports[`onigiri compiler > snapshots > real-world examples > modal dialog 1`] = `
"import { renderSlot as __renderSlot } from "vue-onigiri/runtime/render-slot";

export function renderOnigiri(_ctx, __instance) {
return (_ctx.isOpen ? [0, "div", {"class": "modal-overlay", "onClick": _ctx.close}, [[0, "div", {"class": "modal", "role": "dialog", "aria-labelledby": _ctx.titleId}, [[0, "header", {"class": "modal-header"}, [[0, "h2", {"id": _ctx.titleId}, [[2, _ctx.title]]], [0, "button", {"onClick": _ctx.close, "aria-label": "Close"}, [[2, "×"]]]]], [0, "div", {"class": "modal-body"}, [__renderSlot(_ctx, _ctx.slots, "default", undefined, undefined)]], [0, "footer", {"class": "modal-footer"}, [__renderSlot(_ctx, _ctx.slots, "footer", undefined, () => [[0, "button", {"onClick": _ctx.close}, [[2, "Close"]]]])]]]]]] : null);
}"
`;

exports[`onigiri compiler > snapshots > real-world examples > navigation menu 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "nav", {"class": "navbar"}, [[0, "a", {"href": "/", "class": "logo"}, [[2, "MyApp"]]], [0, "ul", {"class": "nav-links"}, [...(_ctx.links.map((link) => [0, "li", {"key": link.path}, [[0, "a", {"href": link.path, "class": { active: _ctx.currentPath === link.path }}, [[2, link.label]]]]]))]]]];
}"
`;

exports[`onigiri compiler > snapshots > real-world examples > todo item 1`] = `
"export function renderOnigiri(_ctx, __instance) {
return [0, "li", {"class": "todo-item", "class": { completed: _ctx.todo.done }}, [[0, "input", {"type": "checkbox", "checked": _ctx.todo.done, "onChange": $event => (_ctx.toggle(_ctx.todo.id))}], [0, "span", undefined, [[2, _ctx.todo.text]]], [0, "button", {"onClick": $event => (_ctx.remove(_ctx.todo.id))}, [[2, "×"]]]]];
}"
`;

exports[`onigiri compiler > snapshots > slots > default slot outlet 1`] = `
"import { renderSlot as __renderSlot } from "vue-onigiri/runtime/render-slot";

export function renderOnigiri(_ctx, __instance) {
return __renderSlot(_ctx, _ctx.slots, "default", undefined, undefined);
}"
`;

exports[`onigiri compiler > snapshots > slots > named slot outlet 1`] = `
"import { renderSlot as __renderSlot } from "vue-onigiri/runtime/render-slot";

export function renderOnigiri(_ctx, __instance) {
return __renderSlot(_ctx, _ctx.slots, "header", undefined, undefined);
}"
`;

exports[`onigiri compiler > snapshots > slots > scoped slot outlet 1`] = `
"import { renderSlot as __renderSlot } from "vue-onigiri/runtime/render-slot";

export function renderOnigiri(_ctx, __instance) {
return __renderSlot(_ctx, _ctx.slots, "default", {"item": _ctx.item, "index": _ctx.index}, undefined);
}"
`;

exports[`onigiri compiler > snapshots > slots > slot with fallback 1`] = `
"import { renderSlot as __renderSlot } from "vue-onigiri/runtime/render-slot";

export function renderOnigiri(_ctx, __instance) {
return __renderSlot(_ctx, _ctx.slots, "default", undefined, () => [[2, "Fallback content"]]);
}"
`;
